# mytools-osint

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  cli_help.py  main.py  nuitka-crash-report.xml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: agent-daily.yml  ci.yml  release.yml
agent/: README.md  STOP.example  __init__.py  journal.py  main.py  mcp.json  worktree.py
agent/data/: canary_expectations.json
agent/tasks/: badge_update.py  canary_probe.py  changelog_update.py  claude_improvements.py  issue_triage.py  ollama_improvements.py  sync_datasets.py  telegram_announce.py
app/: __init__.py
app/core/: attack.py  cache.py  classify.py  confidence.py  config.py  correlation.py  db.py  entities.py  http.py  infer.py  json_schema.py  plugin_loader.py  profiles.py  retry.py  runner.py  types.py  yaml_config.py
app/features/: __init__.py  agent.py  ai.py  cases.py  cert_watch.py  correlation.py  diff.py  doctor.py  graph.py  notify.py  opsec_check.py  patterns.py  pivot.py  playbooks.py  scheduler.py  self_update.py  siem.py  watchlist.py
app/mcp/: __init__.py  server.py
app/modules/: __init__.py  adjacency.py  asn_bgp.py  base.py  business.py  certspotter.py  cloud_buckets.py  discovery.py  domain.py  dorks.py  email.py  email_extras.py  email_security.py  favicon_hash.py  github_leaks.py  hackertarget.py  hash_lookup.py  hibp_passwords.py  http_headers.py  image.py  internetdb.py  ip.py  ip_extras.py  leaks.py  malware_bazaar.py  passive_dns.py  patterns.py  pgp_keys.py  phone.py  port_scan.py  ripestat.py  route_discover.py  ssl_tls.py  subdomain_brute.py  subdomain_permute.py  subdomain_takeover.py  takeover.py  tech_fingerprint.py  telegram.py  threat_intel.py  (+10 more)
app/ui/: banner.py  command_palette.py  config_cli.py  health.py  html_report.py  interactive.py  interactive_render.py  lookup_input.py  main_menu.py  main_window.py  md_report.py  theme.py  tokens.py  tui_dashboard.py  (+1 more)
data/: holehe_sites.json  sites.json
dist-pypi/: mytools_osint-4.1.1-py3-none-any.whl
docs/: blue-team-playbook.md  docs.html  index.html  red-team-playbook.md  sources.md
packaging/: README.md
scripts/: add_to_path.py  build_cli.py  build_exe.py  diag_design.py  diag_fp.py  diag_inline.py  diag_live.py  install.ps1  install.sh  install_local_agent.ps1  live_probe.py  mac-autoupdate.sh  smoke_test.py  sync_maigret.py  sync_sherlock.py  sync_whatsmyname.py  telegram_login.py  tg_send_code.py  tg_sign_in.py
tests/: conftest.py  factories.py  test_adaptive_theme.py  test_adjacency.py  test_agent_loop.py  test_ai_providers.py  test_autocomplete_ghost.py  test_banner.py  test_base_stream_probes.py  test_cases.py  test_cli.py  test_cli_chat_ux.py  test_confidence.py  test_correlation_rules.py  test_db.py  test_did_you_mean.py  test_diff.py  test_doctor.py  test_email_module.py  test_engine_core.py  test_engine_wpd.py  test_features_patterns.py  test_inference.py  test_inline_actions.py  test_json_schema.py  test_landing_page.py  test_lookup_input.py  test_mcp.py  test_mcp_calltool.py  test_module_business.py  test_module_dorks.py  test_module_hash_lookup.py  test_module_health.py  test_module_image.py  test_module_leaks.py  test_module_wallet.py  test_modules_recon.py  test_new_modules.py  test_notify.py  test_patterns.py  (+17 more)
(+17 files in other folders)
